--- a/can_help.html
+++ b/can_help.html
@@ -9,11 +9,12 @@
 <body>
 
     <div class="container-help">
-        <h1>I can Help</h1>
-        <p>Cette page est en construction.</p>
-        <p>Ici, les utilisateurs pourront proposer leur aide.</p>
+        <h1>Proposer votre aide</h1>
+        <p>Pour proposer vos services, veuillez vous connecter ou créer un compte.</p>
         
-        <!-- Bouton de retour -->
+        <button id="go-to-login">Se connecter</button>
+        <button id="go-to-register">Créer un compte</button>
+        
         <button id="back-button">Retour à l'accueil</button>
     </div>
 
