--- a/index.html
+++ b/index.html
@@ -5,30 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I Need help - La plateforme d'entraide</title>
     <link rel="stylesheet" href="style.css">
-    <!-- On ajoute la bibliothèque d'icônes Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
     <header>
-        <h1><i class="fas fa-hands-helping"></i> I Need help</h1>
-        <p>La plateforme qui met en relation ceux qui ont besoin d'aide avec ceux qui peuvent la fournir.</p>
+        <h1>I Need help</h1>
     </header>
 
     <main class="container">
-        <div class="action-card">
-            <i class="fas fa-hand-holding-heart fa-3x"></i>
-            <h2>J'ai besoin d'aide</h2>
-            <p>Trouvez un professionnel ou un particulier près de chez vous pour vous aider.</p>
-            <a href="need_help.html" class="main-button" id="btn-help-needed">Commencer ma recherche</a>
-        </div>
-
-        <div class="action-card">
-            <i class="fas fa-user-check fa-3x"></i>
-            <h2>Je peux aider</h2>
-            <p>Proposez vos services et votre temps pour aider les membres de la communauté.</p>
-            <a href="can_help.html" class="main-button" id="btn-can-help">Proposer mon aide</a>
-        </div>
+        <a href="need_help.html" class="main-button" id="btn-help-needed">J'ai besoin d'aide</a>
+        <a href="can_help.html" class="main-button" id="btn-can-help">Je propose mon aide</a>
     </main>
 
     <section id="about">
@@ -43,8 +29,8 @@
     <footer>
         <p>&copy; 2024 I Need help. Tous droits réservés.</p>
         <p>
-            <a href="#">Contact</a> | 
-            <a href="#">Mentions Légales</a>
+            <a href="#" title="Page de contact bientôt disponible">Contact</a> | 
+            <a href="#" title="Mentions légales bientôt disponibles">Mentions Légales</a>
         </p>
     </footer>
 
